# trec-car-tools-haskell

./: .gitlab-ci.yml  .gitmodules  blafasel.txt  cabal.project  cabal.project.local.ghc-9.2  default.nix  develop.nix
trec-car-tools/: BuildToc.hs  DumpPages.hs  QrelsModify.hs  TrecRunToQrels.hs  trec-car-tools.cabal
trec-car-tools/src/CAR/: AnnotationsFile.hs  NameToIdMap.hs  QRelFile.hs
trec-car-types/: trec-car-types.cabal
trec-car-types/src/CAR/: CarJSON.hs  Types.hs  Utils.hs
trec-car-types/src/CAR/Types/: AST.hs  Files.hs
trec-car-types/src/CAR/Types/AST/: Pretty.hs
