name:                trec-car-types
version:             0.1.0.0
synopsis:            TREC CAR types
-- description:
homepage:            https://github.com/bgamari/mediawiki-annotate
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016-2019 Ben Gamari, Laura Dietz
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     CAR.Types,
                       CAR.Types.CborList,
                       CAR.Types.Files,
                       CAR.Types.Provenance,
                       CAR.Types.AST,
                       CAR.Types.AST.Pretty,
                       CAR.TocFile,
                       CAR.ToolVersion
                       CAR.Utils.Compact,
                       CAR.Utils
  other-extensions:    ScopedTypeVariables, TypeApplications, BangPatterns, DataKinds, FlexibleContexts, DeriveGeneric, TypeFamilies, OverloadedStrings, RecordWildCards, GeneralizedNewtypeDeriving, RankNTypes, StandaloneDeriving, TemplateHaskell
  if impl(ghc >= 8.2)
      build-depends: ghc-compact
  build-depends:       base >=4.8 && <4.15,
                       optparse-applicative,
                       contravariant,
                       containers,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       text >=1.2 && <1.3,
                       frisby >= 0.2 && <0.3,
                       hashable >=1.2 && <1.4,
                       filepath,
                       deepseq >=1.4 && <1.5,
                       binary >=0.8 && <0.11,
                       network-uri >=2.6 && <2.8,
                       base16-bytestring >=1.0 && <1.1,
                       vector >=0.12 && <0.13,
                       lens >=4.17 && <5.2,
                       aeson >= 1.0,
                       dlist,
                       mmap,
                       text-short,
                       cborg,
                       cborg-json,
                       cryptohash-sha1,
                       serialise >= 0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
